[package]
name = "tunl"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
bollard = "0.21.0"
k8s-openapi = { version = "0.28.0", features = ["latest"] }
kube = { version = "4.0.0", features = ["client", "ws", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["io"] }
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"

[dev-dependencies]
tempfile = "3.27.0"
