[package]
name = "tunl"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
bollard = "0.21.0"
futures-util = { version = "0.3.31", default-features = false, features = ["std"] }
k8s-openapi = { version = "0.28.0", features = ["latest"] }
kube = { version = "4.0.0", features = ["client", "ws", "rustls-tls"] }
notify = "8.2.0"
russh = { version = "0.62.2", default-features = false, features = ["ring"] }
serde = { version = "1.0.228", features = ["derive"] }
socket2 = "0.6.1"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["io"] }
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["json"] }

[dev-dependencies]
rand = "0.10.0"
tempfile = "3.27.0"
